fix: download page mobile layout spacing (#8334)
* fix: download page mobile layout spacing

* chore: make prettier happy

--- a/apps/site/layouts/layouts.module.css
+++ b/apps/site/layouts/layouts.module.css
@@ -68,8 +68,8 @@
 
     &:nth-of-type(2) {
       @apply flex
-        min-w-0
         max-w-full
+        min-w-0
         flex-[1_1]
         flex-col
         items-center
@@ -114,7 +114,7 @@
 }
 
 .downloadLayout {
-  section:nth-last-child(1) {
+  section:nth-last-child(3) {
     @apply flex
       flex-col
       gap-2;
@@ -124,7 +124,7 @@
     }
   }
 
-  section:nth-last-child(2) p {
+  section:nth-last-child(4) p {
     @apply flex
       flex-row
       flex-wrap
@@ -190,8 +190,8 @@
     }
 
     > div:nth-of-type(1) {
-      @apply mb-4
-        mt-2;
+      @apply mt-2
+        mb-4;
     }
   }
 }
